--- a/_posts/2015-07-22-w9-sass.md
+++ b/_posts/2015-07-22-w9-sass.md
@@ -3,21 +3,20 @@ layout: post
 title: "Syntactically Awesome Style Sheets"
 categories: phase0
 ---
-
-
 ![http://sass-lang.com/](http://sass-lang.com/assets/img/logos/logo-b6e1ef6e.svg)
 
-In week 3 of DBC, we were asked to code a website from scratch using HTML and CSS.  That was probably the most frustrating week of my life (*dramatic* I know) mostly due to CSS being horribly painful to a new coder. Especially if you're just mucking around not really knowing how to structure your CSS or what best practices to follow. Now that I'm in week 9, *and the last week of Phase 0*, we were asked to refactor our sites using a framework like [Jekyll](http://jekyllrb.com/) or [Bootstrap](http://getbootstrap.com/).  I chose to redo my site pulling in the Jekyll framework.  Why Jekyll is awesome will come in a different blog post, but through Jekyll I came upon a sexy little CSS compiler called *Sass*.  Which has helped me remember why I love web design again.
+In week 2 of DBC, we were asked to code a website from scratch using HTML and CSS.  That was probably the most frustrating week of my life (*dramatic* I know) mostly due to CSS being horribly painful to a new coder. Especially if you're just mucking around not really knowing how to structure your CSS or what best practices to follow. Now that I'm in week 9, *and the last week of Phase 0*, we were asked to refactor our sites using a framework like [Jekyll](http://jekyllrb.com/) or [Bootstrap](http://getbootstrap.com/).  I chose to redo my site pulling in the Jekyll framework.  Why Jekyll is awesome will come in a different blog post, but through Jekyll I came upon a sexy little CSS compiler called *Sass*.  Which has helped me remember why I love web design again.
 
 # What is Sass you ask?
-Well, straight from the horse's mouth, aka [Hampton Catlin](http://www.hamptoncatlin.com/), he says "think of it as mixing rocket fuel with your CSS and strapping it to a skateboard while pushing it down a hill" (*and I thought I was dramatic*).  BUT it turns out every bit of CSS from it's use of wonderful color manipulation to freakin well organized CSS code, I'm a fan.
+Well, straight from the horse's mouth, aka [Hampton Catlin](http://www.hamptoncatlin.com/), he says "think of it as mixing rocket fuel with your CSS and strapping it to a skateboard while pushing it down a hill" (*and I thought I was dramatic*).  BUT it turns out, after spending all day learning how to use Sass, I am a fan.  It allows you to follow the principles of object oriented programming while compiling your code into vanilla CSS.
 
 # 5 things to love about Sass
-1. CSS is a subclass of Sass, meaning just writing CSS means you're also writing Sass!
-2. Stay DRY my friends - you can create variables and reuse them across your stylesheets
-2. you can do crazy color manipulation like [this](http://s.codepen.io/boomerang/bcf312ac50be7dee42d1f1133e07c69e1437591717016/index.html#)
-3. placeholder classes ```%placeholder```
-4. CSS3 mixins
-5. SO MUCH EASIER TO MAINTAIN!
+CSS is a subclass of Sass, meaning just writing CSS means you're also writing Sass! Of course, Sass lets you do waaay cooler things than plain CSS...
 
-*blog post to be finished later*
+1. you can create variables and reuse them across your stylesheets
+2. you can use loops to dynamically create fun color palettes  like [this](http://codepen.io/ruandre/pen/howFi)
+3. you can use placeholder classes ```%placeholder```
+4. object oriented CSS - [CSS3 mixins](http://oocss.org/spec/css-mixins.html)
+5. THE CODE IS SO MUCH EASIER TO MAINTAIN!
+
+*I will be adding more...*
