--- a/_posts/2015-07-13-w8-big-O.md
+++ b/_posts/2015-07-13-w8-big-O.md
@@ -1,8 +1,29 @@
 ---
 layout: post
-title:  "Big O Complexity and Notation"
+title:  "An Intro to Big O Notation "
 date:   2015-07-13 00:00:00
 categories: phase0
 ---
-# Phase 0, week 8
+Big O notation is used to classify algorithms by how their runtime changes relative to the input, as the input grows arbitrarily large. Runtime is defined by time and space complexity.
 
+Below are some common run times:
+
+* O(1): a constant-time method
+  - the algorithm will always execute in the same time regardless of its input size.
+* O(N): a linear-time method
+  - the algorithm will grow linearly with its input size
+* O(N^2): a quadratic-time method
+  - the algorithm will execute proportional to the square of the size of its input data
+  - nested iterations will be O(N^3) or O(N^4)
+* O(2^N): exponential-time method
+  - execution time will double with each additional element in the input data
+* O(log N): logarithmic-time method
+
+
+**References**:
+
+[Big O Cheat Sheet](http://bigocheatsheet.com/)
+
+[Biginner's guide](https://rob-bell.net/2009/06/a-beginners-guide-to-big-o-notation/)
+
+[Wikipedia](https://en.wikipedia.org/wiki/Big_O_notation)
