add cheat sheet

--- a/_posts/2015-07-06-w7-js.md
+++ b/_posts/2015-07-06-w7-js.md
@@ -4,4 +4,9 @@ title:  "Ruby vs Javascript"
 date:   2015-07-06 00:00:00
 categories: phase0
 ---
-# Phase 0, week 7
+This week we started learning about Javascript. Identify one fundamental difference between how Ruby and JavaScript do something, and teach your audience about it. There are many ways you can look at this. Here are some ideas:
+Some big topics to go over:
+
+1. Ruby Hashes vs. JavaScript Objects
+
+2. Ruby classes vs. JavaScript constructor functions
