--- a/_posts/2015-07-13-w8-big-O.md
+++ b/_posts/2015-07-13-w8-big-O.md
@@ -4,6 +4,8 @@ title:  "An Intro to Big O Notation "
 date:   2015-07-13 00:00:00
 categories: phase0
 ---
+![Big-O chart](http://therecyclebin.files.wordpress.com/2008/05/time-complexity.png)
+
 Big O notation is used to classify algorithms by how their runtime changes relative to the input, as the input grows arbitrarily large. Runtime is defined by time and space complexity.
 
 Below are some common run times:
@@ -18,12 +20,13 @@ Below are some common run times:
 * O(2^N): exponential-time method
   - execution time will double with each additional element in the input data
 * O(log N): logarithmic-time method
+  - I like this example from [stackoverflow](http://stackoverflow.com/questions/2307283/what-does-olog-n-mean-exactly)
+    - Given a person's name, find the phone number by picking a random point about halfway through the part of the book you haven't searched yet, then checking to see whether the person's name is at that point. Then repeat the process about halfway through the part of the book where the person's name lies. (This is a binary search for a person's name.)
 
+[*examples coming soon*]
 
 **References**:
 
-[Big O Cheat Sheet](http://bigocheatsheet.com/)
-
-[Biginner's guide](https://rob-bell.net/2009/06/a-beginners-guide-to-big-o-notation/)
-
-[Wikipedia](https://en.wikipedia.org/wiki/Big_O_notation)
+* [Big O Cheat Sheet](http://bigocheatsheet.com/)
+* [Biginner's guide](https://rob-bell.net/2009/06/a-beginners-guide-to-big-o-notation/)
+* [Wikipedia](https://en.wikipedia.org/wiki/Big_O_notation)
