--- a/_posts/2015-05-24-w2-css.md
+++ b/_posts/2015-05-24-w2-css.md
@@ -4,4 +4,9 @@ title:  "A deeper look into CSS"
 date:   2015-05-24 00:00:00
 categories: phase0
 ---
+<img class="img center" src="http://mlkshk.com/r/PPML" alt="css sucks" style="width: 248px; height: 186px;"/>
+
 This week we coded a static website from scratch using HTML and CSS and hosted that on Github pages.
+
+I was a grumpy cat this week.
+
