--- a/_posts/2015-07-06-w7-js.md
+++ b/_posts/2015-07-06-w7-js.md
@@ -4,9 +4,12 @@ title:  "Ruby vs Javascript"
 date:   2015-07-06 00:00:00
 categories: phase0
 ---
-This week we started learning about Javascript. Identify one fundamental difference between how Ruby and JavaScript do something, and teach your audience about it. There are many ways you can look at this. Here are some ideas:
-Some big topics to go over:
+This week we got our feet wet with Javascript.  I had a little bit of history with JS already, it was the first language I dabbled in, so I have a soft spot for JS. Now that I have a few weeks of Ruby under my belt, it's a good time to compare the two languages.
 
 1. Ruby Hashes vs. JavaScript Objects
+The minute I saw a Ruby hash I was reminded for JS objects.
+Ruby in a sense is a
 
 2. Ruby classes vs. JavaScript constructor functions
+Ruby classes are fantastic
+JS doesn't have any classes, objects are
