--- a/_posts/2015-07-13-w8-big-O.md
+++ b/_posts/2015-07-13-w8-big-O.md
@@ -4,7 +4,8 @@ title:  "An Intro to Big O Notation "
 date:   2015-07-13 00:00:00
 categories: phase0
 ---
-![Big-O chart](http://therecyclebin.files.wordpress.com/2008/05/time-complexity.png)
+<img class="center" src="http://therecyclebin.files.wordpress.com/2008/05/time-complexity.png" alt="big o" style="width: 502px; height: 236px;"/>
+
 
 Big O notation is used to classify algorithms by how their runtime changes relative to the input, as the input grows arbitrarily large. Runtime is defined by time and space complexity.
 
