--- a/_posts/2015-07-22-w9-sass.md
+++ b/_posts/2015-07-22-w9-sass.md
@@ -3,7 +3,7 @@ layout: post
 title: "Syntactically Awesome Style Sheets"
 categories: phase0
 ---
-<img src="http://sass-lang.com/assets/img/logos/logo-b6e1ef6e.svg" alt="Sass" style="width: 300px; height: 250px;"/>
+<img class="center" src="http://sass-lang.com/assets/img/logos/logo-b6e1ef6e.svg" alt="Sass" style="width: 250px; height: 250px;"/>
 
 In week 2 of DBC, we were asked to code a website from scratch using HTML and CSS.  That was probably the most frustrating week of my life (*dramatic* I know) mostly due to CSS being horribly painful to a new coder. Especially if you're just mucking around not really knowing how to structure your CSS or what best practices to follow. Now that I'm in week 9, *and the last week of Phase 0*, we were asked to refactor our sites using a framework like [Jekyll](http://jekyllrb.com/) or [Bootstrap](http://getbootstrap.com/).  I chose to redo my site pulling in the Jekyll framework.  Why Jekyll is awesome will come in a different blog post, but through Jekyll I came upon a sexy little CSS compiler called *Sass*.  Which has helped me remember why I love web design again.
 
