--- a/_posts/2015-07-13-w8-big-O.md
+++ b/_posts/2015-07-13-w8-big-O.md
@@ -24,7 +24,50 @@ Below are some common run times:
   - I like this example from [stackoverflow](http://stackoverflow.com/questions/2307283/what-does-olog-n-mean-exactly)
     - Given a person's name, find the phone number by picking a random point about halfway through the part of the book you haven't searched yet, then checking to see whether the person's name is at that point. Then repeat the process about halfway through the part of the book where the person's name lies. (This is a binary search for a person's name.)
 
-[*examples coming soon*]
+**Example**
+I'm told that a common interview question involves checking if a number is a part of the Fibonacci sequence.   There are many ways to implement this method, but ideally we'd want to implement Fibonacci in the most efficient way. 3 examples below:
+
+**Write a method to check if a number is a part of the Fibonacci sequence.**
+
+# Pseudocode
+- Input: a number
+- Output: a method to check if that number is part of the fibonacci sequence arr. Return true or false
+- Fibonacci numbers: [0,1,1,2,3,5,8,13,21,34,55,89,144]
+- each number is the sum of the previous 2
+- start with [0,1] as the first 2 numbers
+- f(n+1) = f(n) + f(n-1)
+
+
+# Solution A
+{% highlight ruby %}
+def is_fibonacci?(num)
+  arr = [0, 1]
+  while num > arr.last
+    x, y = arr.pop(2)
+      arr.push(x, y, x + y)
+  end
+  return true if num == arr.last
+  return false
+ end
+ {% endhighlight %}
+*Big O notation:*
+
+# Solution B
+{% highlight ruby %}
+def is_fibonacci?(num, current = 1, previous = 0)
+  return true if current == num || num == 0
+  return false if current > num
+  is_fibonacci?(num, current + previous, current)
+end
+{% endhighlight %}
+*Big O notation:*
+
+# Solution C
+*Big O notation:*
+
+Which implementation is the most efficient?
+
+
 
 **References**:
 
