add recursion blog post

--- a/_posts/2015-07-13-w8-big-O.md
+++ b/_posts/2015-07-13-w8-big-O.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "An Intro to Big O Notation "
+title:  "Intro to Big O"
 date:   2015-07-13 00:00:00
 categories: phase0
 ---
@@ -25,7 +25,7 @@ Below are some common run times:
     - Given a person's name, find the phone number by picking a random point about halfway through the part of the book you haven't searched yet, then checking to see whether the person's name is at that point. Then repeat the process about halfway through the part of the book where the person's name lies. (This is a binary search for a person's name.)
 
 **Example**
-I'm told that a common interview question involves checking if a number is a part of the Fibonacci sequence.   There are many ways to implement this method, but ideally we'd want to implement Fibonacci in the most efficient way. 3 examples below:
+I'm told that a common interview question involves checking if a number is a part of the Fibonacci sequence.   There are many ways to implement this method, but ideally we'd want to implement Fibonacci in the most efficient way. A common complaint about writing a solution recursively is its high runtime.  Using 3 examples below:
 
 **Write a method to check if a number is a part of the Fibonacci sequence.**
 
@@ -38,35 +38,26 @@ I'm told that a common interview question involves checking if a number is a par
 - f(n+1) = f(n) + f(n-1)
 
 
-# Solution A
+# Solution A - iterative
 {% highlight ruby %}
-def is_fibonacci?(num)
-  arr = [0, 1]
-  while num > arr.last
-    x, y = arr.pop(2)
-      arr.push(x, y, x + y)
+def fibonacci_iterative(n)
+  array =[0,1]
+  2.upto(n) do |num|
+    array << (array[num-2] + array[num-1])
   end
-  return true if num == arr.last
-  return false
- end
- {% endhighlight %}
-*Big O notation:*
-
-# Solution B
-{% highlight ruby %}
-def is_fibonacci?(num, current = 1, previous = 0)
-  return true if current == num || num == 0
-  return false if current > num
-  is_fibonacci?(num, current + previous, current)
+  array[n]
 end
 {% endhighlight %}
-*Big O notation:*
+*Big O: O(n)*
 
-# Solution C
-*Big O notation:*
-
-Which implementation is the most efficient?
-
+# Solution B - recursive
+{% highlight ruby %}
+def fibonacci_recursive(n)
+  return n if [0,1].include? n
+  fibonacci_recursive(n-2) + fibonacci_recursive(n-1)
+end
+{% endhighlight %}
+*Big O: O(2^n)*
 
 
 **References**:
@@ -74,3 +65,4 @@ Which implementation is the most efficient?
 * [Big O Cheat Sheet](http://bigocheatsheet.com/)
 * [Biginner's guide](https://rob-bell.net/2009/06/a-beginners-guide-to-big-o-notation/)
 * [Wikipedia](https://en.wikipedia.org/wiki/Big_O_notation)
+*[StackOverflow](http://stackoverflow.com/questions/360748/computational-complexity-of-fibonacci-sequence)
